--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=vehiclemanager
 spring.liquibase.change-log=db/changelog/db.changelog-master.xml
+spring.jpa.open-in-view=false
